--- a/.github/workflows/diario_bot.yml
+++ b/.github/workflows/diario_bot.yml
@@ -2,15 +2,16 @@ name: Monitor Diario Teresopolis
 
 on:
   schedule:
-    - cron: '0 12 * * 1-5' # Roda às 09:00 Brasil (12:00 UTC), Seg-Sex
-  workflow_dispatch: # Botão para rodar manual
+    # Roda de Segunda a Sexta às 21:00 UTC (18:00 Brasília)
+    - cron: '0 21 * * 1-5'
+  workflow_dispatch: # Permite rodar manualmente clicando no botão
 
 jobs:
-  build:
+  rodar-robo:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout do código
+      - name: Baixar Código
         uses: actions/checkout@v3
 
       - name: Configurar Python
@@ -18,16 +19,22 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@latest
-
       - name: Instalar Dependências
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Executar Robô
         env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python main.py
+        
+      - name: Upload PDF (Para Debug se falhar)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: diario-baixado
+          path: diario_hoje.pdf
+          retention-days: 1
